css/main.css
/* Selectors */

*,
  *::before,
  *::after {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
  }

  html {
    background-color: #222;
  }

  a {
    color: #6fff00;
    text-decoration: none;
  }

  a:hover {
    color: #f89400;
    text-decoration: underline;
    outline: 3px solid rgba(111, 255, 0, 0.6);
  }

  a:focus {
    color: #f89400;
    padding: 0.25rem;
    outline: 3px solid rgba(111, 255, 0, 0.6);
  }

  body {
    color: #fefefe;
    font-family: 'Droid Sans Mono', monospace;
    font-size: 1.5rem;
    margin: 0;
  }

  h1,
  h2,
  h3 {
    color: #fefefe;
    font-family: 'Inconsolata', monospace;
  }

  h1 {
    font-size: 3.0rem;
  }

  h2 {
    color: #ee00ff;
    font-size: 2.5rem;
  }

  li {
    margin-bottom: 1.5rem;
  }

  main {
    margin: 0 auto;
    max-width: 700px;
    padding: 0 15px;
  }

  time {
    color: #fefefe;
    font-size: 1rem;
  }

  /* Classes */

  .blog,
  .books {
    margin: 12.5rem 0 0;
    padding: 0px 15px;
  }

  .blog-posts,
  .book {
    list-style-type: circle;
  }

  .container {
    margin: -2.5rem auto;
    max-width: 700px;
  }

  .copyright {
    color: #00ffff;
    font-size: 0.75rem;
  }

  .intro {
    align-itrems: center;
    display: flex;
    height: 50vh;
    margin: 50px 0 0;
    padding: 0px 15px;
    text-align: center;
  }

  .nav-bottom nav {
    float: left;
    margin: 0 auto;
    max-width: 700px;
  }

  .nav-bottom {
    margin-top: 12rem;
  }

  .nav-top {
    background-color: #222;
    box-shadow: 0px 1px 1px RGBA(4, 25, 54, 0.1);
    height: 8.5rem;
    left: 0;
    margin-top: -0.5rem;
    padding-top: 2rem;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
  }

  .nav-top nav {
    float: left;
    margin: 0 auto;
    max-width: 700px;
    padding-left: 12px;
  }

  .nav-top nav ul,
  .nav-bottom nav ul {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .nav-top nav ul li,
  .nav-bottom nav ul li {
    float: left;
    position: relative;
  }

  .nav-top nav ul li a {
    color: #fefefe;
    display: block;
    font-family: 'Inconsolata', monospace;
    font-size: 2rem;
    line-height: 2rem;
    margin-bottom: -1px;
    padding: 1rem;
    text-decoration: none;
  }

  .nav-bottom nav ul li a {
    color: #fefefe;
    display: block;
    font-size: 1.5rem;
    line-height: 1.5rem;
    margin-bottom: -1px;
    padding: 1rem;
    text-decoration: none;
  }

  .nav-top nav ul li a:hover,
  .nav-top nav ul li a:active,
  .nav-bottom nav ul li a:hover,
  .nav-bottom nav ul li a:active {
    color: #ee00ff;
    text-decoration: underline;
  }

  .nav-top nav ul li a:focus,
  .nav-bottom nav ul li a:focus,
  .nav-top nav ul li a:hover,
  .nav-bottom nav ul li a:hover {
    outline: 3px solid rgb(255, 255, 255);
    color: #ee00ff;
  }

  .nav-top nav:after,
  .nav-bottom nav:after {
    clear: both;
    content: '';
    display: table;
  }

  .posts {
    margin: 200px 0 0;
    padding: 0px 15px;
  }

  .post-title {
    line-height: 3rem;
  }

  .quote {
    color: #fefefe;
    font-family: 'Droid Sans Mono', monospace;
    font-size: 1.3rem;
    margin-top: 20rem;
  }

  .site-header {
    margin-bottom: 0;
    padding: 0.5rem;
  }

  .site-header a {
    color: #fefefe;
  }

  .site-header a:hover,
  .site-header a:focus {
    color: #ee00ff;
    outline: 3px solid rgb(255, 255, 255);
  }

  .skip {
    padding-left: 2.5rem;
  }

  .skip a {
    color: #6fff00;
    height: 1px;
    left: -10000px;
    overflow: hidden;
    position: absolute;
    top: auto;
    width: 1px;
  }

  .skip a:focus {
    outline: 3px solid rgba(111, 255, 0, 0.6);
    color: #f89400;
    height: auto;
    position: static;
    width: auto;
  }

  .tolkien a,
  .tolkien a:focus,
  .tolkien a:hover {
    color: transparent;
    font-size: 0px;
  }

